<resources>
    <string name="app_name">KeepRun</string>
    <string name="leak_canary_test_class_name">assertk.Assert</string>

    <string name="onboardingText1">
        Welcome to KEEPRUN! A journey to healthy &amp; active life!
    </string>

    <string name="onboardingText2">
        You can track your calories burned and statistics under your profile.
    </string>

    <string name="onboardingText3">
        Let’s burn some calories and get fit!
    </string>

    <string-array name="sorting_options">
        <item>Date</item>
        <item>Run time</item>
        <item>Calories burned</item>
        <item>Distance</item>
        <item>Average speed</item>
        <item>Steps count</item>
    </string-array>

    <string-array name="date_options">
        <item>Today</item>
        <item>This week</item>
        <item>This month</item>
    </string-array>

    <string name="get_started">Get Started</string>
    <string name="welcome_w_exclamation">Welcome!</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="do_not_have_acc">Don\'t have an account? Sign Up</string>
    <string name="already_have_acc">Already have an account? Sign In</string>
    <string name="email_empty_error">Please enter your email.</string>
    <string name="email_invalid_error">Invalid email.</string>
    <string name="username_empty_error">Please enter a username.</string>
    <string name="username_too_long_error">Please enter a username shorter than 13 characters.</string>
    <string name="password_empty_error">Please enter your password.</string>
    <string name="password_char_error">Your password must be longer than 6 character and must contain at least one capital, one lower letter, and one special character.</string>
    <string name="password_match_error">The passwords are not matched.</string>
    <string name="confirmation_sent_to_email">Confirmation mail has sent to your email address.</string>
    <string name="permission_error">You need to give permissions in order to use the app.</string>
    <string name="ready_to_run">All set! You are ready to run.</string>
    <string name="no_internet_error">No Internet Connection.</string>
    <string name="welcome_onboard">Welcome Onboard!</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_username">Enter your user name</string>
    <string name="enter_a_password">Enter a password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="please_enter_your_email">Please enter your email.</string>
    <string name="send">Send</string>
    <string name="back">Back</string>
    <string name="fields_cant_be_empty">Fields can not be empty.</string>
    <string name="username_too_long">Username is too long</string>
    <string name="please_enter_matches_pass">Please enter a matched password</string>
    <string name="password_requires">The password is required to have at least one upper letter, one lower letter, one number and a special character</string>
    <string name="next_button">Next Button</string>
    <string name="please_enter_your_weight">Please enter your weight.</string>
    <string name="enter_your_weight">Enter your weight</string>
    <string name="submit">Submit</string>
    <string name="we_need_this_for_calculation_of_calories_burned">We need this for calculation of calories burned.</string>
    <string name="runs">Runs</string>
    <string name="statistics">Statistics</string>
    <string name="runs_tab">Runs tab</string>
    <string name="statistics_tab">Statistics tab</string>
    <string name="settings_tab">Settings tab</string>
    <string name="logout">Logout</string>
    <string name="logout_button">Logout button</string>
    <string name="recorded_runs">Recorded Runs</string>
    <string name="sorted_by">Sorted by</string>
    <string name="start_run">Start Run</string>
    <string name="start_run_tab">Start run tab</string>
    <string name="about_tab">About tab</string>
    <string name="about">About</string>
    <string name="about_content">KeepRun is a running application that aims for its users to make it such a healthy habit. \n\nThis application is designed and developed by Ferec Hamitbeyli. \n\nFor your further questions, feedbacks, and business inquiries, please send me an email. \n\nferechamitbeyli@gmail.com</string>
    <string name="your_statistics">Your Statistics</string>
    <string name="phone_location_alert">Please enable your location from your phone.</string>
    <string name="timer_start_value">00:00:00:00</string>
    <string name="pause">Pause</string>
    <string name="start">Start</string>
    <string name="finish">Finish</string>
    <string name="map_view_for_you_to_track_the_route">Map view for you to track the route</string>
    <string name="finish_the_run">Finish the run</string>
    <string name="pause_the_run">Pause the run</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="application">Application</string>
    <string name="save">Save</string>
    <string name="sort_runs_by">Sort runs by</string>
    <string name="logout_confirmation">Logout Confirmation</string>
    <string name="logout_text">Are you sure you want to log out now?</string>
    <string name="confirm_logout">Confirm logout</string>
    <string name="cancel_logout">Cancel logout</string>
    <string name="cancel_run_text">Are you sure you want to cancel current run?</string>
    <string name="confirm_cancelling_the_run">Confirm cancelling the run</string>
    <string name="confirm_cancelling_current_run">Confirm cancelling current run</string>
    <string name="abort_cancelling_current_run">Abort cancelling current run</string>
    <string name="notifications_enabled">Notifications enabled</string>
    <string name="notifications_disabled">Notifications disabled</string>
    <string name="your_weight">Your weight</string>
    <string name="get_back_to_runs_screen">Get back to runs screen</string>
    <string name="tap">Tap</string>
    <string name="to_start_a_run">to start a run.</string>
    <string name="permission_required">Permission Required</string>
    <string name="location_perm_desc">In order to use this app, you need to give permission for location information.</string>
    <string name="location_perm_reasoning">We need this for all calculations of running and its statistics. (Except counting steps).</string>
    <string name="background_location_perm_desc">In order to use this app, you need to give permission for background location information.</string>
    <string name="background_location_perm_reasoning">We need this to be able to get location information while the application is in background.</string>
    <string name="activity_recog_perm_desc">In order to use this app, you need to give permission for activity recognition.</string>
    <string name="activity_recog_perm_reasoning">We need this for calculation of steps.</string>
    <string name="accept">Accept</string>
    <string name="start_a_run">Start a run</string>
    <string name="empty_recyclerview_description">You don\'t have any recorded run.\nPlease start a run.</string>
    <string name="reset">Reset</string>
    <string name="resume">Resume</string>
    <string name="displayed_date">Displayed date</string>
    <string name="total_run_time">Total Run Time</string>
    <string name="total_average_run_speed">Total Average Run Speed</string>
    <string name="total_run_distance">Total Run Distance</string>
    <string name="total_calories_burned">Total Calories Burned</string>
    <string name="total_steps">Total Steps</string>
    <string name="first_week">First Week</string>
    <string name="second_week">Second Week</string>
    <string name="too_low_distance">You run less than 10 meters. To record the run you have to run at least 10 meters.</string>

</resources>