<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrey">

    <com.google.android.gms.maps.MapView
        android:id="@+id/trackingMap_mv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/map_view_for_you_to_track_the_route"
        app:layout_constraintBottom_toBottomOf="@id/horizontal6_gl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/trackingTimer_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/timer_start_value"
        android:textSize="@dimen/title2"
        app:layout_constraintBottom_toBottomOf="@id/horizontal725_gl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontal625_gl" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/pauseRun_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_pause_run"
        android:contentDescription="@string/pause_the_run"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/horizontal85_gl"
        app:layout_constraintEnd_toEndOf="@id/vertical4_gl"
        app:layout_constraintStart_toStartOf="@id/vertical2_gl"
        app:layout_constraintTop_toTopOf="@id/horizontal75_gl" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/pause_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/pause"
        android:textSize="@dimen/paragraph"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/vertical4_gl"
        app:layout_constraintStart_toStartOf="@id/vertical2_gl"
        app:layout_constraintTop_toTopOf="@id/horizontal85_gl" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startRun_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_start_run"
        android:contentDescription="@string/start_a_run"
        app:layout_constraintBottom_toBottomOf="@id/horizontal85_gl"
        app:layout_constraintEnd_toEndOf="@id/vertical4_gl"
        app:layout_constraintStart_toStartOf="@id/vertical2_gl"
        app:layout_constraintTop_toTopOf="@id/horizontal75_gl" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/start_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/start"
        android:textSize="@dimen/paragraph"
        app:layout_constraintEnd_toEndOf="@id/vertical4_gl"
        app:layout_constraintStart_toStartOf="@id/vertical2_gl"
        app:layout_constraintTop_toTopOf="@id/horizontal85_gl" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/finishRun_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_finish_run"
        android:contentDescription="@string/finish_the_run"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/horizontal85_gl"
        app:layout_constraintEnd_toEndOf="@id/vertical8_gl"
        app:layout_constraintStart_toStartOf="@id/vertical6_gl"
        app:layout_constraintTop_toTopOf="@id/horizontal75_gl" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/finish_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/finish"
        android:textSize="@dimen/paragraph"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/vertical8_gl"
        app:layout_constraintStart_toStartOf="@id/vertical6_gl"
        app:layout_constraintTop_toTopOf="@id/horizontal85_gl" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/goBack_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_back"
        android:contentDescription="@string/get_back_to_runs_screen"
        app:layout_constraintBottom_toBottomOf="@id/horizontal85_gl"
        app:layout_constraintEnd_toEndOf="@id/vertical8_gl"
        app:layout_constraintStart_toStartOf="@id/vertical6_gl"
        app:layout_constraintTop_toTopOf="@id/horizontal75_gl" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/goBack_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/back"
        android:textSize="@dimen/paragraph"
        app:layout_constraintEnd_toEndOf="@id/vertical8_gl"
        app:layout_constraintStart_toStartOf="@id/vertical6_gl"
        app:layout_constraintTop_toTopOf="@id/horizontal85_gl" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal6_gl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal625_gl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.625" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal725_gl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.725" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal75_gl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal85_gl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal875_gl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.875" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical2_gl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical4_gl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical6_gl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical8_gl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />


</androidx.constraintlayout.widget.ConstraintLayout>