<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialog_bg">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/logoutConfirmation_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:text="@string/logout_confirmation"
        android:textSize="@dimen/title3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/logoutText_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/montserrat_regular"
        android:gravity="center"
        android:text="@string/logout_text"
        android:textSize="@dimen/paragraph2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoutConfirmation_tv" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/logoutConfirm_btn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/btn_background"
        android:contentDescription="@string/confirm_logout"
        android:src="@drawable/ic_tick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/vertical4_gl"
        app:layout_constraintStart_toStartOf="@id/vertical1_gl"
        app:layout_constraintTop_toBottomOf="@id/logoutText_tv" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/logoutCancel_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/btn_warning_background"
        android:contentDescription="@string/cancel_logout"
        android:src="@drawable/ic_cross"
        app:layout_constraintBottom_toBottomOf="@+id/logoutConfirm_btn"
        app:layout_constraintEnd_toEndOf="@id/vertical9_gl"
        app:layout_constraintStart_toStartOf="@+id/vertical6_gl"
        app:layout_constraintTop_toTopOf="@+id/logoutConfirm_btn" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical1_gl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical4_gl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical6_gl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical9_gl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />


</androidx.constraintlayout.widget.ConstraintLayout>